update home page view

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -19,7 +19,7 @@ postPage = "blog/post"
 		<div x-spread="start">
 			{% partial "header" color="white" %}
 
-			<div class="px-12 flex flex-col lg:flex-row w-full lg:h-screen lg:pt-32 lg:-mt-32 justify-between">
+			<div class="px-12 w-full h-screen pt-32 mt-32 justify-between">
 
 				<div class="flex flex-col max-w-xl mt-auto mb-16">
 					<a href="{{ 'home'|page }}">
