--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -3,7 +3,7 @@ url = "/"
 layout = "blank"
 is_hidden = 0
 
-[blogPosts recentBlogPosts]
+[blogPosts]
 pageNumber = 1
 postsPerPage = 5
 noPostsMessage = "No posts found"
@@ -11,23 +11,33 @@ sortOrder = "published_at desc"
 categoryPage = "blog/tag"
 postPage = "blog/post"
 
+[builderList projectList]
+modelClass = "Ilcscience\Portfolio\Models\Project"
+scope = "-"
+scopeValue = "{{ :scope }}"
+displayColumn = "title"
+noRecordsMessage = "No records found"
+detailsPage = "projects/project"
+detailsKeyColumn = "slug"
+detailsUrlParameter = "slug"
+pageNumber = "{{ :page }}"
 ==
 <div class="fixed text-white inset-0 flex justify-center">
 	
-	<div x-init="init()" x-data="fixedPage()" style="max-width: 1240px" class="absolute z-10 w-full">
+	<div x-init="init()" x-data="fixedPage()" style="max-width: 1240px" class="absolute z-10 w-full h-full">
 
-		<div x-spread="start">
+		<div class="flex flex-col justify-between h-full" x-spread="start">
 			{% partial "header" color="white" %}
 
-			<div class="px-12 w-full h-screen pt-32 mt-32 justify-between">
+			<div class="px-6 md:px-12 w-full">
 
-				<div class="flex flex-col max-w-xl mt-auto mb-16">
+				<div class="flex flex-col max-w-xl mb-8 md:mb-12">
 					<a href="{{ 'home'|page }}">
 					</a>
 					<div class="flex-1 mt-4">
 						<h1 class="leading-none font-extrabold text-4xl sm:text-6xl">I'm {{ this.theme.name }}</h1>
 						<div class="mt-2">
-							<div class="mt-8 text-2xl">
+							<div class="mt-8 text-xl break-words md:text-2xl">
 								<p class="">{{ this.theme.whoami }}</p>
 								<div class="">
 									{% for paragraph in this.theme.whoami_more %}
@@ -39,6 +49,9 @@ postPage = "blog/post"
 					</div>
 				</div>
 				
+				<svg onclick="scrollToContent()" class="cursor-pointer mb-8 md:mb-12 mx-auto animate-bounce w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+					<path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+				</svg>
 			</div>
 		</div>
 
@@ -58,14 +71,14 @@ postPage = "blog/post"
 	
 </div>
 
-<div style="margin: 100vh 0;" class="bg-white h-screen relative">
+<div id="content" style="margin: 100vh 0; min-height: 100vh;" class="bg-gray-200 relative">
 
-	<div style="max-width: 1240px;" class="py-8 px-12 mx-auto">
+	<div style="max-width: 1240px;" class="py-8 px-6 md:px-12 mx-auto">
 		<div class="py-6 mt-16">
 			<h2 class="font-bold"> Projects </h2>
 
 			<div class="mt-8">
-				My projects
+			    {% partial 'projects/projectListRaw' %}
 			</div>
 			
 		</div>
@@ -75,27 +88,24 @@ postPage = "blog/post"
 
 			<ul class="mt-8">
 
-				{% for post in recentBlogPosts.posts %}
-
-				<li class="flex">
-					<div>
-						{{ post.published_at|date('M d, Y') }}
-					</div>
-					<h4 class="ml-2">
-						<a href="{{ post.url }}">{{ post.title }}</a>
-					</h4>
-				</li>
-
-				{% endfor %}
-
+				{% partial 'blog/blogPostsListRaw' show_images=false %}
+				
 			</ul>
 		</div>
+
+		<div class="mt-16"></div>
+
 	</div>
 	
 </div>
 
 <script>
 
+ function scrollToContent() {
+	 document.getElementById('content').scrollIntoView({ 
+		 behavior: 'smooth' 
+	 });
+ }
  function fixedPage() {
 	 return {
 		 showStart: true,
