only load matrix effect js on home page

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -22,7 +22,7 @@ detailsKeyColumn = "slug"
 detailsUrlParameter = "slug"
 pageNumber = "{{ :page }}"
 ==
-<div class="fixed text-white inset-0 flex justify-center">
+<div class="fixed text-white inset-0 flex justify-center bg-black">
 	
 	<div x-init="init()" x-data="fixedPage()" style="max-width: 1240px" class="absolute z-10 w-full h-full">
 
@@ -99,6 +99,7 @@ pageNumber = "{{ :page }}"
 	
 </div>
 
+<script type="text/javascript" src="themes/mikus-blog/assets/public/js/matrix-effect.js"></script>
 <script>
 
  function scrollToContent() {
