i consider the website ready

--- a/src/themes/mikus-blog/pages/projects.htm
+++ b/src/themes/mikus-blog/pages/projects.htm
@@ -17,7 +17,7 @@ pageNumber = "{{ :page }}"
 ==
 
 <div class="flex flex-col items-center text-center">
-	<h1 class="">{{ this.page.title }}</h1>
+	<h1 class="font-bold">{{ this.page.title }}</h1>
 </div>
 
 {% partial "projects/projectList" %}
