--- a/src/themes/mikus-blog/pages/blog.htm
+++ b/src/themes/mikus-blog/pages/blog.htm
@@ -19,7 +19,7 @@ categoryPage = "blog/tag"
 ==
 
 <div class="flex flex-col items-center text-center">
-	<h1 class="">{{ this.page.title }}</h1>
+	<h1 class="font-bold">{{ this.page.title }}</h1>
 
 	<div class="mt-2">
 		<h3>Categories</h3>
@@ -35,3 +35,4 @@ categoryPage = "blog/tag"
 </div>
 
 {% partial 'blog/blogPostsList' %}
+
