--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -26,17 +26,16 @@ pageNumber = "{{ :page }}"
 	
 	<div x-init="init()" x-data="fixedPage()" style="max-width: 1240px" class="absolute z-10 w-full h-full">
 
-		<div class="flex flex-col justify-between h-full" x-spread="start">
+		<div class="h-full flex flex-col justify-between" x-spread="start">
+
 			{% partial "header" color="white" %}
 
 			<div class="px-6 md:px-12 w-full">
 
 				<div class="flex flex-col max-w-xl mb-8 md:mb-12">
-					<a href="{{ 'home'|page }}">
-					</a>
 					<div class="flex-1 mt-4">
 						<h1 class="leading-none font-extrabold text-4xl sm:text-6xl">I'm {{ this.theme.name }}</h1>
-						<div class="mt-2">
+						<div class="">
 							<div class="mt-8 text-xl break-words md:text-2xl">
 								<p class="">{{ this.theme.whoami }}</p>
 								<div class="">
@@ -49,9 +48,11 @@ pageNumber = "{{ :page }}"
 					</div>
 				</div>
 				
-				<svg onclick="scrollToContent()" class="cursor-pointer mb-8 md:mb-12 mx-auto animate-bounce w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-					<path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
-				</svg>
+				<div class="cursor-pointer mb-8 md:mb-12" onclick="scrollToContent()" >
+					<svg class="animate-bounce w-6 h-6 mx-auto" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+						<path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+					</svg>
+				</div>
 			</div>
 		</div>
 
@@ -81,9 +82,14 @@ pageNumber = "{{ :page }}"
 			    {% partial 'projects/projectListRaw' %}
 			</div>
 
-			<div>
-				<a class="link" href={{ 'projects'|page }} >
-					<button class="py-2 px-4 ml-auto border shadow block">All projects</button>
+			<div class="mt-8 font-bold">
+				<a class="link link-black" href={{ 'projects'|page }} >
+					<button class="py-2 px-4 ml-auto block flex items-center">
+						<span>
+							{{'See all projects'|_|upper}}
+						</span>
+						<svg class="ml-2" viewBox="0 0 24 24" preserveAspectRatio="none" data-testid="svg-icon" width="18" height="18" fill="#080812" stroke="transparent"><path d="M0 0h24v24H0z" fill="none"></path><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path></svg></button>
+					</button>
 				</a>
 			</div>
 		</div>
@@ -97,9 +103,14 @@ pageNumber = "{{ :page }}"
 				
 			</ul>
 
-			<div>
-				<a class="link" href={{ 'blog'|page }} >
-					<button class="cursor-pointer py-2 px-4 border shadow ml-auto block">All posts</button>
+			<div class="mt-8 font-bold">
+				<a class="link link-black" href={{ 'blog'|page }} >
+					<button class="py-2 px-4 ml-auto block flex items-center">
+						<span>
+							{{ 'See all posts' |_|upper }}
+						</span>
+						<svg class="ml-2" viewBox="0 0 24 24" preserveAspectRatio="none" data-testid="svg-icon" width="18" height="18" fill="#080812" stroke="transparent"><path d="M0 0h24v24H0z" fill="none"></path><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path></svg>
+					</button>
 				</a>
 			</div>
 		</div>
@@ -139,6 +150,7 @@ pageNumber = "{{ :page }}"
 		 },
 		 init() {
 			 document.addEventListener("scroll", this.onScroll.bind(this));
+			 window.onload = this.onScroll;
 		 },
 		 start: {
 			 ['x-show']() {
