update home page

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -1,6 +1,7 @@
 title = "Home"
 url = "/"
 layout = "blank"
+meta_title = "Mikołaj Gałkowski"
 is_hidden = 0
 
 [blogPosts]
@@ -34,7 +35,7 @@ pageNumber = "{{ :page }}"
 
 				<div class="flex flex-col max-w-xl mb-8 md:mb-12">
 					<div class="flex-1 mt-4">
-						<h1 class="leading-none font-extrabold text-4xl sm:text-6xl">I'm {{ this.theme.name }}</h1>
+						<h1 class="leading-none font-extrabold text-4xl sm:text-6xl">{{ this.theme.name }}</h1>
 						<div class="">
 							<div class="mt-8 text-xl break-words md:text-2xl">
 								<p class="">{{ this.theme.whoami }}</p>
