do onscroll  on document load instead window load

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -57,13 +57,13 @@ pageNumber = "{{ :page }}"
 			</div>
 		</div>
 
-		<div x-spread="footer" class="flex h-screen justify-center items-center">
+		<div x-spread="footer" class="flex flex-col h-screen justify-center items-center">
 
 			<div class="text-center">
 				<h2 class="font-bold" >Contact me:</h2>
 				<h3><a class="link link-white" href="mailto:{{ this.theme.contact }}">{{this.theme.contact}}</a></h3>
 			</div>
-			
+
 		</div>
 		
 		
@@ -151,7 +151,7 @@ pageNumber = "{{ :page }}"
 		 },
 		 init() {
 			 document.addEventListener("scroll", this.onScroll.bind(this));
-			 window.onload = this.onScroll;
+			 document.onload = this.onScroll;
 		 },
 		 start: {
 			 ['x-show']() {
