--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -25,16 +25,16 @@ pageNumber = "{{ :page }}"
 ==
 <div class="fixed text-white inset-0 flex justify-center bg-black">
 	
-	<div x-init="init()" x-data="fixedPage()" style="max-width: 1240px" class="absolute z-10 w-full h-full">
+	<div style="max-width: 1240px" class="absolute inset-0 z-10 w-full h-full mx-auto">
 
-		<div class="h-full flex flex-col justify-between" x-spread="start">
+		<div id="start" class="h-full flex flex-col justify-between" x-spread="start">
 
 			{% partial "header" color="white" %}
 
-			<div class="px-6 md:px-12 w-full">
+			<div  class="px-6 md:px-12 w-full">
 
-				<div class="flex flex-col max-w-xl mb-8 md:mb-12">
-					<div class="flex-1 mt-4">
+				<div class="max-w-xl mb-8 md:mb-12">
+					<div class="mt-4">
 						<h1 class="leading-none font-extrabold text-4xl sm:text-6xl">{{ this.theme.name }}</h1>
 						<div class="">
 							<div class="mt-8 text-xl break-words md:text-2xl">
@@ -57,7 +57,7 @@ pageNumber = "{{ :page }}"
 			</div>
 		</div>
 
-		<div x-spread="footer" class="flex flex-col h-screen justify-center items-center">
+		<div id="footer" class="flex flex-col h-screen justify-center items-center">
 
 			<div class="text-center">
 				<h2 class="font-bold" >Contact me:</h2>
@@ -73,7 +73,8 @@ pageNumber = "{{ :page }}"
 	
 </div>
 
-<div id="content" style="margin: 100vh 0; min-height: 100vh;" class="bg-gray-200 relative">
+<div class="min-h-screen"></div> <!-- Instead of margin 100vh 0; below -->
+<div id="content" class="bg-gray-200 min-h-screen relative">
 
 	<div style="max-width: 1240px;" class="py-8 px-6 md:px-12 mx-auto">
 		<div class="py-6 mt-16">
@@ -121,50 +122,41 @@ pageNumber = "{{ :page }}"
 	</div>
 	
 </div>
+<div class="min-h-screen"></div>
 
 <script type="text/javascript" src="themes/mikus-blog/assets/public/js/matrix-effect.js"></script>
 <script>
 
+ var showStart = true;
+ var showFooter = false;
+ 
  function scrollToContent() {
 	 document.getElementById('content').scrollIntoView({ 
 		 behavior: 'smooth' 
 	 });
  }
- function fixedPage() {
-	 return {
-		 showStart: true,
-		 showFooter: false,
-		 onScroll(event) {
-			 let el = event.target.scrollingElement;
-			 if (el.scrollTop > window.innerHeight) {
-				 if (this.showFooter == false) {
-					 this.showStart = false;
-					 this.showFooter = true;
-				 }
-			 }
-			 else {
-				 if (this.showFooter == true) {
-					 this.showStart = true;
-					 this.showFooter = false;
-				 }
-			 }
-		 },
-		 init() {
-			 document.addEventListener("scroll", this.onScroll.bind(this));
-			 document.onload = this.onScroll;
-		 },
-		 start: {
-			 ['x-show']() {
-				 return this.showStart;
-			 }
-		 },
-		 footer: {
-			 ['x-show']() {
-				 return this.showFooter;
-			 },
-			 ['x-cloak']() { }
+
+ function onScroll(event) {
+	 var el = event.target.scrollingElement;
+	 if (el.scrollTop > window.innerHeight) {
+		 if (showFooter == false) {
+			 showStart = false;
+			 showFooter = true;
 		 }
 	 }
+	 else {
+		 if (showFooter == true) {
+			 showStart = true;
+			 showFooter = false;
+		 }
+	 }
+
+	 document.getElementById('start').style.display = showStart ? null : "none";
+	 document.getElementById('footer').style.display = showFooter ? null : "none";
+
  }
+
+ document.addEventListener("scroll", onScroll);
+ document.onload = onScroll;
  
 </script>
