--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -23,11 +23,11 @@ detailsKeyColumn = "slug"
 detailsUrlParameter = "slug"
 pageNumber = "{{ :page }}"
 ==
-<div class="fixed text-white inset-0 flex justify-center bg-black">
+<div class="z-20 fixed text-white inset-0 flex justify-center bg-black">
 	
 	<div style="max-width: 1240px" class="absolute inset-0 z-10 w-full h-full mx-auto">
 
-		<div id="start" class="h-full flex flex-col justify-between" x-spread="start">
+		<div id="start" class="h-full flex flex-col justify-between">
 
 			{% partial "header" color="white" %}
 
@@ -73,11 +73,11 @@ pageNumber = "{{ :page }}"
 	
 </div>
 
-<div class="min-h-screen"></div> <!-- Instead of margin 100vh 0; below -->
-<div id="content" class="bg-gray-200 min-h-screen relative">
+<div class="min-h-screen relative"></div> <!-- Instead of margin 100vh 0; below -->
+<div id="content" class="bg-gray-100 min-h-screen relative z-20">
 
-	<div style="max-width: 1240px;" class="py-8 px-6 md:px-12 mx-auto">
-		<div class="py-6 mt-16">
+	<div style="max-width: 1240px;" class="py-2 md:py-8 px-6 md:px-12 mx-auto">
+		<div class="mt-8 md:mt-16">
 			<h2 class="font-bold"> Projects </h2>
 
 			<div class="mt-8">
@@ -96,7 +96,7 @@ pageNumber = "{{ :page }}"
 			</div>
 		</div>
 		
-		<div class="py-6 mt-16">
+		<div class="mt-16">
 			<h2 class="font-bold">Recent Blog Posts</h2>
 
 			<ul class="mt-8">
@@ -117,12 +117,12 @@ pageNumber = "{{ :page }}"
 			</div>
 		</div>
 
-		<div class="mt-16"></div>
+		<div class="mt-8 md:mt-16"></div>
 
 	</div>
 	
 </div>
-<div class="min-h-screen"></div>
+<div class="min-h-screen relative"></div>
 
 <script type="text/javascript" src="themes/mikus-blog/assets/public/js/matrix-effect.js"></script>
 <script>
