--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -25,7 +25,7 @@ pageNumber = "{{ :page }}"
 ==
 <div class="z-20 fixed text-white inset-0 flex justify-center bg-black">
 	
-	<div style="max-width: 1240px" class="absolute inset-0 z-10 w-full h-full mx-auto">
+	<div style="max-width: 1400px" class="absolute inset-0 z-10 w-full h-full mx-auto">
 
 		<div id="start" class="h-full flex flex-col justify-between">
 
@@ -76,7 +76,7 @@ pageNumber = "{{ :page }}"
 <div class="min-h-screen relative"></div> <!-- Instead of margin 100vh 0; below -->
 <div id="content" class="bg-gray-200 min-h-screen relative z-20">
 
-	<div style="max-width: 1240px;" class="py-2 md:py-8 px-6 md:px-12 mx-auto">
+	<div style="max-width: 1400px;" class="py-2 md:py-8 px-6 md:px-12 mx-auto">
 		<div class="mt-8 md:mt-16">
 			<h2 class="font-bold"> Projects </h2>
 
@@ -156,7 +156,7 @@ pageNumber = "{{ :page }}"
 
  }
 
- document.addEventListener("scroll", onScroll);
- document.onload = onScroll;
+ /* document.addEventListener("scroll", onScroll);
+	* document.onload = onScroll; */
  
 </script>
