fixup! udpate styling

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -156,7 +156,7 @@ pageNumber = "{{ :page }}"
 
  }
 
- /* document.addEventListener("scroll", onScroll);
-	* document.onload = onScroll; */
+ document.addEventListener("scroll", onScroll);
+ document.onload = onScroll;
  
 </script>
