--- a/src/themes/mikus-blog/pages/projects.htm
+++ b/src/themes/mikus-blog/pages/projects.htm
@@ -16,7 +16,7 @@ pageNumber = "{{ :page }}"
 
 ==
 
-<div class="flex flex-col items-center text-center">
+<div class="flex flex-col items-center text-center mb-4">
 	<h1 class="font-bold">{{ this.page.title }}</h1>
 </div>
 
