--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -77,7 +77,7 @@ pageNumber = "{{ :page }}"
 <div id="content" class="bg-gray-200 min-h-screen relative z-20">
 
 	<div style="max-width: 1400px;" class="py-2 md:py-8 px-6 md:px-12 mx-auto">
-		<div class="mt-8 md:mt-16">
+		<div class="mt-8">
 			<h2 class="font-bold"> Projects </h2>
 
 			<div class="mt-8">
@@ -117,7 +117,7 @@ pageNumber = "{{ :page }}"
 			</div>
 		</div>
 
-		<div class="mt-8 md:mt-16"></div>
+		<div class="mt-8"></div>
 
 	</div>
 	
