--- a/src/themes/mikus-blog/pages/projects/project.htm
+++ b/src/themes/mikus-blog/pages/projects/project.htm
@@ -32,7 +32,7 @@ function onEnd()
 
 {% if record %}
 
-<div class="flex flex-col items-center text-center mb-4">
+<div class="flex flex-col items-center text-center">
 	<h2 class="font-bold" itemprop="headline">{{ attribute(record, displayColumn) }}</h2>
 	{% if project.short_description %}
 	<p class="my-2" itemprop="description">{{ project.short_description }}</p>
