fixup! remove js page content switching

--- a/src/themes/mikus-blog/pages/home.htm
+++ b/src/themes/mikus-blog/pages/home.htm
@@ -113,7 +113,7 @@ pageNumber = "{{ :page }}"
   
 </div>
 
-<div class="w-full text-white relative min-h-screen">
+<div class="w-full text-white relative webkit-min-h-screen">
 
   <div id="footer" class="absolute inset-0">
     <div class="content mx-auto h-full flex flex-col justify-center items-center">
